Bug 421067: 'Try Again' after a DNS error sometimes loads previous page, not the one that failed to load, patch by Michal Novotny <michal@allpeers.com>, r+sr=bzbarsky, a=schrep